2006-01-11 Yen-Ju Chen <yjchenx at gmail _dot_ com>

   * Source/Index/LCIndexReader.m:
   * Source/Search/LCPrefixQuery.m:
   * Source/Search/LCTopDocCollector.m:
   * Source/Search/LCTopFieldDocCollector.m:
   * Source/Search/LCIndexSearcher.m:
   * Source/Search/LCMultiTermQuery.m:
   Up-to-date.

2006-01-10 Yen-Ju Chen <yjchenx at gmail _dot_ com>

   * Source/Index/LCTerm.m:
   * Source/Search/LCFieldCache.m:
   Bug fixed.
   * Unit Test Result: 51 classes, 129 methods, 651980 tests, 0 failed

2006-01-09 Yen-Ju Chen <yjchenx at gmail _dot_ com>

   * Source/Index/LCDocumentWriter.m:
   * Headers/Index/LCDocumentWriter.h:
   Use C type instead of objects to optimize the code.
   * Source/Index/LCFieldsReader.m:
   * Soruce/Index/LCFieldsWriter.m:
   Improve memory management.
   * Source/Index/LCTerm.m:
   * Source/Index/LCTermBuffer.m:
   Improve memory management and one bug found.

2005-12-27 Yen-Ju Chen <yjchenx at gmail _dot_ com>

   * Source/Search/LCIndexSearcher.m:
   include float.h

2005-12-26 Yen-Ju Chen <yjchenx at gmail _dot_ com>

   add autorelease pool to reduce memory usage.

2005-12-25 Yen-Ju Chen <yjchenx at gmail _dot_ com>

   * Source/Index/LCTermVectorsReader.m:
   initiate return value suggested by Dirk Theisen <d.theisen...>

2005-12-22 Yen-Ju Chen <yjchenx at gmail _dot_ com>

   * Source/Search/LCFieldCacheImpl.m:
   * Source/Search/LCBooleanScorer.m:
   fix missing 'return' suggested by Dirk Theisen <d.theisen...>

2005-12-16 Yen-Ju Chen <yjchenx at gmail _dot_ com>
   * Source/Search/LCBooleanScorer.m:
   * Source/Search/LCBooleanMinShouldMatch.m:
   Pass all tests: Result: 51 classes, 127 methods, 651972 tests, 0 failed
   * Source/Analysis/LCAnalyzer.m:
   * Source/Index/LCDocumentWriter.m:
   * Source/Search/LCSmiliarity.m:
   * Source/Search/LCHits.m:
   * Source/Search/LCTopDocs.m:
   * Source/Search/LCTopFieldDocs.m:
   * Source/Search/LCIndexSearcher.m:
   * Source/Index/LCMultiReader.m:
   * Source/Index/TestMultiReader.m: